    current.
12. Adjust now-playing landscape text size.
13. Check now-playing landscape mode on all resizes, not just width.
14. Don't attempt to animate current queue element if already animating it.
15. Hide 'CD Player' and 'Remote Libraries' from 'Settings' dialog 'Home screen
    items' selection unless these are enabled in LMS.

1.7.1
-----
1. Handle case where firmware is not a string - thanks to 'UrbaneChimp'
2. Map icon for "squeezebox3"
3. Cancel timer in sleep dialog if closed by 'esc' or no players.
4. Allow changing player icons.
5. Ignore 'esc' when confirm, and simple text entry, dialogs are shown.
6. Show spinning progress in 'Information' dialog when downloading plugins or
   scanning database.
7. Hide player name and icon in 'Player settings' dialog if password set and not
   matched.
8. Hide create, edit, and delete group options in 'Mange players' dialog if
   password set and not matched.
9. Only bind one handler to all volume buttons, and use element id to determine
   action to take.

1.7.0
-----
 1. Improve Adwaita (Linux) scrollbars.
 2. Show shutdown and restart actions in server settings toolbar if called from
    information dialog.
 3. Move player 'Extra settings', and custom actions, into menu in 'Player
    settings' dialog toolbar.
 4. Move 'Set sleep time for all players' and 'Create group' into menu in
    'Manage players' dialog toolbar.
 5. Only show DSTM dialog on longpress if DSTM is currently active.
 6. Remove outer scrollbar on DSTM dialog.
 7. Fix font-weight of text items in browse list.
 8. Update translations.
 9. Translate 'Dark' part of theme names.
10. Always add custom actions to 'Player settings' dialog.
11. If fail to load theme CSS file, fallback to 'dark.css'
12. When launching mini-player take device pixel ratio into account so that
    correct size window is created.
13. Slightly increase width of mini-player so that epiphany does not start in
    its mobile layout.