@@ -4,6 +4,7 @@
 "%1 of %2":"",
 "%1 seconds":"",
 "%1 until sleep":"",
+"'%1' is already a member of '%2'":"",
 "(Currently only 'SB Player' is supported.)":"",
 "A playlist with this name already exists":"",
 "About":"",
@@ -18,6 +19,7 @@
 "Add selection to queue":"",
 "Add to favorites":"",
 "Added '%1'":"",
+"Added '%1' to '%2'":"",
 "Added to favorites":"",
 "Adding albums...":"",
 "Adding tracks...":"",
@@ -111,7 +113,7 @@
 "Draw background":"",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"",
 "Draw letter overlay":"",
-"Drop here to remove from sync group":"",
+"Drop here to remove from group":"",
 "E-Mail":"",
 "ERROR: List processing failed":"",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"",
@@ -259,6 +261,7 @@
 "Remove all tracks from queue?":"",
 "Remove from favorites":"",
 "Remove the selected items?":"",
+"Removed '%1' from '%2'":"",
 "Rename":"",
 "Rename failed":"",
 "Rename favorite":"",
