@@ -441,15 +441,18 @@
 "%1 Years":"%1 år",
 "1 day":"1 dag",
 "%1 days":"%1 dage",
+"'%1' is already a member of '%2'":"",
+"Added '%1' to '%2'":"",
 "Appended album to the play queue":"",
 "Appended all albums to the play queue":"",
 "Application settings":"",
 "Changes":"",
 "Color toolbars":"",
 "Darker":"",
-"Drop here to remove from sync group":"",
+"Drop here to remove from group":"",
 "Go to album":"",
 "Go to artist":"",
+"Removed '%1' from '%2'":"",
 "Show current date and time":"",
 "Show current date and time in main toolbar if there is sufficient space.":"",
 "Use chosen color for toolbars.":""
