@@ -430,12 +430,14 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
+"'%1' is already a member of '%2'":"",
+"Added '%1' to '%2'":"",
 "Alt+%1":"",
 "Alt+N":"",
 "Audio":"",
 "Changes":"",
 "Disc %1":"",
-"Drop here to remove from sync group":"",
+"Drop here to remove from group":"",
 "E-Mail":"",
 "Firmware: %1":"",
 "Go to album":"",
@@ -448,6 +450,7 @@
 "Pause":"",
 "Plugins":"",
 "Radio":"",
+"Removed '%1' from '%2'":"",
 "Server":"",
 "Start":"",
 "URL":"",
