@@ -24,6 +24,7 @@
 "%1 of %2":"",
 "%1 seconds":"",
 "%1 until sleep":"",
+"'%1' is already a member of '%2'":"",
 "(Currently only 'SB Player' is supported.)":"",
 "A playlist with this name already exists":"",
 "About":"",
@@ -35,6 +36,7 @@
 "Add podcast":"",
 "Add selection to queue":"",
 "Added '%1'":"",
+"Added '%1' to '%2'":"",
 "Adding albums...":"",
 "Adding tracks...":"",
 "Advanced":"",
@@ -123,7 +125,7 @@
 "Draw background":"",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"",
 "Draw letter overlay":"",
-"Drop here to remove from sync group":"",
+"Drop here to remove from group":"",
 "E-Mail":"",
 "ERROR: List processing failed":"",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"",
@@ -263,6 +265,7 @@
 "Remove all selected items":"",
 "Remove all tracks from queue?":"",
 "Remove the selected items?":"",
+"Removed '%1' from '%2'":"",
 "Rename":"",
 "Rename failed":"",
 "Rename item":"",
