@@ -296,11 +296,13 @@
 "%1 days":"%1 giorni",
 "%1 Menu":"",
 "%1 seconds":"",
+"'%1' is already a member of '%2'":"",
 "A playlist with this name already exists":"",
 "Add URL to queue":"",
 "Add favorite or podcast":"",
 "Add podcast":"",
 "Added '%1'":"",
+"Added '%1' to '%2'":"",
 "Adding albums...":"",
 "Adding tracks...":"",
 "Advanced":"",
@@ -333,7 +335,7 @@
 "Disc %1":"",
 "Don't Stop The Music":"",
 "Downloading plugin updates":"",
-"Drop here to remove from sync group":"",
+"Drop here to remove from group":"",
 "E-Mail":"",
 "Each player may be assigned a 'virtual' library. If set then this will be used to restrict song selection for 'Random Mix' (only songs from the chosen library will be used), and other modes. This setting might also affect library browsing with other LMS control points (such as the default web UI).":"",
 "Enable keyboard shortcuts":"",
@@ -389,6 +391,7 @@
 "Provider":"",
 "Radio":"",
 "Remove album":"",
+"Removed '%1' from '%2'":"",
 "Rescan":"",
 "Restart":"",
 "Restart Logitech Media Server?":"",
